# haskell

./: .gitignore  Comonads.hs  HeathrowLondon.hs  LeJSON.hs  PolishNotation.hs  README.md  ReversePolish.hs  Sudoku.hs  haskell.cabal  projectEuler.hs  test.hs  testJSON.json
src/: Comonads.hs  LeJSON.hs  PolishNotation.hs  ProjectEuler.hs  Reanimating.hs  Sudoku.hs  Test.hs  test.txt
