cabal-version:      2.4
name:               haskell
version:            0.1.0.0
synopsis:           Just me messing around in haskell

homepage: https://github.com/kvietcong/haskell

-- A URL where users can report bugs.
bug-reports:        https://github.com/kvietcong/haskell/issues
author:             KV Le
maintainer:         32186663+kvietcong@users.noreply.github.com

extra-source-files:
    README.md

executable hasu
    main-is:            Reanimating.hs
    ghc-options:        -Wall
    default-language:   Haskell2010
    hs-source-dirs:     src
    build-depends: base
                 , reanimate
                 , lens
                 , JuicyPixels
                 , random
