cabal-version:      3.4
name:               haskell
version:            0.0.0.1
synopsis:           Just me messing around in haskell

homepage:           https://github.com/kvietcong/haskell
bug-reports:        https://github.com/kvietcong/haskell/issues
author:             KV Le
maintainer:         32186663+kvietcong@users.noreply.github.com

extra-source-files:
    README.md

executable comonads
    main-is:            Comonads.hs
    ghc-options:        -Wall
    default-language:   Haskell2010
    hs-source-dirs:     src
    build-depends: base
                 , comonad
                 , process

executable reanimating
    main-is:            Reanimating.hs
    ghc-options:        -Wall
    default-language:   Haskell2010
    hs-source-dirs:     src
    build-depends: base
                 , reanimate
                 , lens
                 , JuicyPixels

executable heathrow
    main-is:            HeathrowLondon.hs
    ghc-options:        -Wall
    default-language:   Haskell2010
    hs-source-dirs:     src
    build-depends: base

executable polish
    main-is:            PolishNotation.hs
    ghc-options:        -Wall
    default-language:   Haskell2010
    hs-source-dirs:     src
    build-depends: base

executable json
    main-is:            LeJSON.hs
    ghc-options:        -Wall
    default-language:   Haskell2010
    hs-source-dirs:     src
    build-depends: base

executable euler
    main-is:            ProjectEuler.hs
    ghc-options:        -Wall
    default-language:   Haskell2010
    hs-source-dirs:     src
    build-depends: base

executable test
    main-is:            Test.hs
    ghc-options:        -Wall
    default-language:   Haskell2010
    hs-source-dirs:     src
    build-depends: base

executable sudoku
    main-is:            Sudoku.hs
    ghc-options:        -Wall
    default-language:   Haskell2010
    hs-source-dirs:     src
    build-depends: base
